# CppCMakeTemplate

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  codecov.yml
app/: CMakeLists.txt  main.cc
benchmarks/: CMakeLists.txt  main.cc
cmake/: documentation.cmake
docs/: Doxyfile.in
docs/html/: app_2_c_make_lists_8txt.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_func.html  index.html  main_8cc.html  my__lib_8cc.html  my__lib_8cc.js  my__lib_8h.html  my__lib_8h.js  my__lib_8h_source.html  navtreedata.js  navtreeindex0.js  src_2_c_make_lists_8txt.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
include/: my_lib.h
src/: CMakeLists.txt  my_lib.cc
tests/: CMakeLists.txt  main.cc
